syntax = "proto3";

option csharp_namespace = "GrpcService";

package user;

// The greeting service definition.
service UserRPC {
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
}

message GetUserByIdRequest {
  int32 userId = 1;
}

message GetUserByIdResponse {
  int32 userId = 1;
  string name = 2;
  
}
